# wrds-spectral-sp500-strategy

./: .gitignore  README.md  pyproject.toml
configs/: local.example.yaml  seven_recommendations_search.example.yaml  tuned_alpha_gt15.example.yaml  walk_forward_5y_holdout.example.yaml  walk_forward_holdout.example.yaml
docs/: alpha_improvement_recommendations.md  seven_recommendations_broad_wrds_backtest.md  walk_forward_2021_2025_selection.md  walk_forward_2025_selection.md  wrds_pit_sp500_artifact_request.md
scripts/: run_current_fixed_top10_sp500.py  tune_sp500_parameters.py
src/wrds_spectral_sp500_strategy/: __init__.py  backtest.py  cli.py  clustering.py  config.py  data.py  features.py  gates.py  objectives.py  performance.py  portfolio.py  rebalance.py  selection.py  sp500.py  universe.py  walk_forward.py
tests/: test_data.py  test_rebalance_and_gates.py  test_recommendations.py  test_sp500.py
