[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wrds-spectral-sp500-strategy"
version = "0.1.0"
description = "PIT S&P 500 and broad WRDS spectral strategy backtests."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
wrds-spectral-sp500-backtest = "wrds_spectral_sp500_strategy.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
